Added header with styling & readme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,53 @@
     <!-- Favicon -->
 </head>
 <body>
-    <h1>Unikátní investiční mince s motivy mistrů světa Formule 1.</h1>
+  <main>
+    <div id="hero">
+      <header>
+        <div class="row">
+          <div id="logo">
+            <a href="#">
+              <img src="./assets/images/logo@2x.png" alt="Motorsport Legends Logo" />
+            </a>
+          </div>
+          <div class="select-wrapper">
+            <select id="legend-select">
+              <option value="" disabled selected>Vyberte si legendu</option>
+            </select>
+          </div>
+        </div>
+  
+        <div class="row no-gap">
+          <div class="row prices">
+            <div class="column">
+              <p class="golden">&#9650; <span>1 Unce zlato:</span></p>
+              <p class="price">45 572.75 Kč</p>
+            </div>
+            <div class="column">
+              <p class="silver">&#9650; <span>1 Unce stříbro:</span></p>
+              <p class="price">517.83 Kč</p>
+            </div>
+          </div>
+          <div class="chart-button">
+            <img src="./assets/icons/chart-icon.png" alt="Zobrazit vývoj cen" />
+            <a href="#">Vývoj cen</a>
+          </div>
+          <nav>
+            <img src="./assets/icons/burger.png" alt="Menu" />
+          </nav>
+        </div>
+      </header>
+      <div class=" row">
+        <div>
+          <h1>Unikátní investiční mince s motivy mistrů světa Formule 1.</h1>
+        </div>
+        <div>
+        
+        </div>
+        </div>
+        <div id="featured-products">
+          <h2>Naše produkty</h2>
+        </div>
+        </main>
 </body>
 </html>
