Hero section, animated

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <main>
+    <img src="./assets/images/graham-hill-connected.png" alt="Graham Hill" id="animated-hero-image" />
+    <img src="./assets/images/formula.svg" alt="Formule 1" id="formula" />
     <div id="hero">
       <header>
         <div class="row">
@@ -44,17 +46,28 @@
           </nav>
         </div>
       </header>
-      <div class=" row">
-        <div>
-          <h1>Unikátní investiční mince s motivy mistrů světa Formule 1.</h1>
+      <div class="info row">
+        <div class="info-text">
+          <h1>Unikátní investiční mince s motivy mistrů světa
+            <span class="golden">Formule 1.</span>
+          </h1>
+          <div class="cta-section">
+            <a href="#" class="cta-primary">Zjistit více</a>
+            <a href="#" class="cta-secondary"><img src="./assets/icons/cart.png" alt="Košík" />Koupit v e-shopu</a>
+          </div>
         </div>
-        <div>
-        
+        <div class="scroller">
+          <img src="./assets/icons/mouse.svg" alt="Scroll" />
+          <div class="horizontal-line"></div>
         </div>
+        <div class="coins">
+          <img id="coin-silver" src="./assets/images/hill-stribro@2x.png" alt="Motorsport Legends mince stříbro" />
+          <img id="coin-gold" src="./assets/images/hill-mince@2x.png" alt="Motorsport Legends mince zlato" />
         </div>
-        <div id="featured-products">
-          <h2>Naše produkty</h2>
-        </div>
-        </main>
+      </div>
+      <div id="featured-products">
+        <h2>Naše produkty</h2>
+      </div>
+      </main>
 </body>
 </html>
