--- a/index.html
+++ b/index.html
@@ -10,43 +10,42 @@
 </head>
 <body>
   <main>
-    <img src="./assets/images/graham-hill-connected.png" alt="Graham Hill" id="animated-hero-image" />
-    <img src="./assets/images/formula.svg" alt="Formule 1" id="formula" />
-    <div id="hero">
-      <header>
-        <div class="row">
-          <div id="logo">
-            <a href="#">
-              <img src="./assets/images/logo@2x.png" alt="Motorsport Legends Logo" />
-            </a>
-          </div>
-          <div class="select-wrapper">
-            <select id="legend-select">
-              <option value="" disabled selected>Vyberte si legendu</option>
-            </select>
-          </div>
+    <header>
+      <div class="row">
+        <div id="logo">
+          <a href="#">
+            <img src="./assets/images/logo@2x.png" alt="Motorsport Legends Logo" />
+          </a>
         </div>
-  
-        <div class="row no-gap">
-          <div class="row prices">
-            <div class="column">
-              <p class="golden">&#9650; <span>1 Unce zlato:</span></p>
-              <p class="price">45 572.75 Kč</p>
+        <div class="select-wrapper">
+          <select id="legend-select">
+            <option value="" disabled selected>Vyberte si legendu</option>
+          </select>
+        </div>
+      </div>
+      <div class="row no-gap">
+        <div class="row prices">
+          <div class="column">
+            <p class="golden">&#9650; <span>1 Unce zlato:</span></p>
+            <p class="price" id="goldPrice">45 252.31 Kč</p>
             </div>
             <div class="column">
               <p class="silver">&#9650; <span>1 Unce stříbro:</span></p>
-              <p class="price">517.83 Kč</p>
+            <p class="price" id="silverPrice">523.98 Kč</p>
             </div>
-          </div>
-          <div class="chart-button">
-            <img src="./assets/icons/chart-icon.png" alt="Zobrazit vývoj cen" />
-            <a href="#">Vývoj cen</a>
-          </div>
-          <nav>
-            <img src="./assets/icons/burger.png" alt="Menu" />
-          </nav>
-        </div>
+            </div>
+            <div class="chart-button">
+              <img src="./assets/icons/chart-icon.png" alt="Zobrazit vývoj cen" />
+              <a href="#">Vývoj cen</a>
+            </div>
+            <nav>
+              <img src="./assets/icons/burger.png" alt="Menu" />
+            </nav>
+            </div>
       </header>
+    <img src="./assets/images/graham-hill-connected.png" alt="Graham Hill" id="animated-hero-image" />
+    <img src="./assets/images/formula.svg" alt="Formule 1" id="formula" />
+    <div id="hero">
       <div class="info row">
         <div class="info-text">
           <h1>Unikátní investiční mince s motivy mistrů světa
@@ -115,5 +114,7 @@
         </div>
       </nav>
       <script src="./assets/scripts/scroller.js"></script>
+      <script src="./assets/scripts/product-cards.js"></script>
+      <script src="./assets/scripts/prices.js"></script>
 </body>
 </html>
