Optimized image delivery

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       <div class="row">
         <div id="logo">
           <a href="#">
-            <img src="./assets/images/logo@2x.png" alt="Motorsport Legends Logo" />
+            <picture>
+              <source srcset="./assets/images/logo@2x.webp" type="image/webp">
+              <img src="./assets/images/logo@2x.png" alt="Motorsport Legends Logo" />
+            </picture>
           </a>
         </div>
         <div class="select-wrapper">
@@ -35,15 +38,24 @@
             </div>
             </div>
             <div class="chart-button">
-              <img src="./assets/icons/chart-icon.png" alt="Zobrazit vývoj cen" />
+              <picture>
+                <source srcset="./assets/icons/chart-icon.webp" type="image/webp">
+                <img src="./assets/icons/chart-icon.png" alt="Zobrazit vývoj cen" />
+              </picture>
               <a href="#">Vývoj cen</a>
             </div>
             <nav>
-              <img src="./assets/icons/burger.png" alt="Menu" />
+              <picture>
+                <source srcset="./assets/icons/burger.webp" type="image/webp">
+                <img src="./assets/icons/burger.png" alt="Menu" />
+              </picture>
             </nav>
             </div>
       </header>
-    <img src="./assets/images/graham-hill-text-full.png" alt="Graham Hill" id="animated-hero-image" />
+    <picture id="animated-hero-image">
+      <source srcset="./assets/images/graham-hill-text-full.webp" type="image/webp">
+      <img src="./assets/images/graham-hill-text-full.png" alt="Graham Hill"/>
+    </picture>
     <img src="./assets/images/formula.svg" alt="Formule 1" id="formula" />
     <div id="hero">
       <div class="info row">
@@ -53,12 +65,22 @@
           </h1>
           <div class="cta-section">
             <a href="#" class="cta-primary">Zjistit více</a>
-            <a href="#" class="cta-secondary"><img src="./assets/icons/cart.png" alt="Košík" />Koupit v e-shopu</a>
+            <a href="#" class="cta-secondary">
+            <picture>
+              <source srcset="./assets/icons/cart.webp" type="image/webp">
+              <img src="./assets/icons/cart.png" alt="Košík" />
+            </picture>Koupit v e-shopu</a>
           </div>
         </div>
         <div class="coins">
-          <img id="coin-silver" src="./assets/images/hill-stribro@2x.png" alt="Motorsport Legends mince stříbro" />
-          <img id="coin-gold" src="./assets/images/hill-mince@2x.png" alt="Motorsport Legends mince zlato" />
+          <picture>
+            <source srcset="./assets/images/hill-stribro@2x.webp" type="image/webp">
+            <img id="coin-silver" src="./assets/images/hill-stribro@2x.png" alt="Motorsport Legends mince stříbro" />
+          </picture>
+          <picture>
+            <source srcset="./assets/images/hill-mince@2x.webp" type="image/webp">
+            <img id="coin-gold" src="./assets/images/hill-mince@2x.png" alt="Motorsport Legends mince zlato" />
+          </picture>
         </div>
       </div>
     </div>
@@ -72,21 +94,30 @@
         <h2>prvních 12 mistrů světa F1</h2>
         <div class="products-row">
           <div class="product-card">
-            <img src="./assets/images/hill@2x.png" alt="Produkt 1" />
+            <picture>
+              <source srcset="./assets/images/hill@2x.webp" type="image/webp">
+              <img src="./assets/images/hill@2x.png" alt="Graham Hill" />
+            </picture>
             <h4>Graham Hill</h4>
             <h5>Formula One World Champion</h5>
             <p class="year">1962, 1968</p>
             <a href="#" class="cta-primary">Investiční mince</a>
           </div>
           <div class="product-card">
-            <img src="./assets/images/alan@2x.png" alt="Produkt 1" />
+            <picture>
+              <source srcset="./assets/images/alan@2x.webp" type="image/webp">
+              <img src="./assets/images/alan@2x.png" alt="Alan Jones" />
+            </picture>
             <h4>Alan Jones</h4>
             <h5>F1 Winner</h5>
             <p class="year">1980</p>
             <a href="#" class="cta-primary">Investiční mince</a>
           </div>
           <div class="product-card">
-            <img src="./assets/images/nigel@2x.png" alt="Produkt 1" />
+            <picture>
+              <source srcset="./assets/images/nigel@2x.webp" type="image/webp">
+              <img src="./assets/images/nigel@2x.png" alt="Nigel Mansell" />
+            </picture>
             <h4>Nigel Mansell</h4>
             <h5>Formula One World Champion</h5>
             <p class="year">1992</p>
